--- a/countdown timer/style.css
+++ b/countdown timer/style.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
     margin: 0; 
     backdrop-filter: blur(5px);  /* use this to blur the background of the page */
 }
@@ -27,7 +27,7 @@ body {
     font-size: 4rem;
     margin-bottom: 0px;
     font-weight: normal;
-    font-family: 'Lemonada', cursive;
+    font-family: 'Rubik', sans-serif;
     color: #FF6701;
 }
 
